# caffold

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  playwright.config.mjs  playwright.live.config.mjs
desktop/macos/: CaffoldServer.swift  IconGenerator.swift  Info.plist  README.md  package-app
desktop/macos/CaffoldServer/: Runtime.swift  SystemStatus.swift
docs/: README.md
docs/internal/: codex-app-server.md  frontend-structure.md  live-updates.md  mvp.md  navigation-routing.md  operation-ledger.md  roadmap.md  security-approvals.md  ui-surfaces.md  workflows.md  worktree-lifecycle.md
docs/public/: architecture.md  review-policy.md  vision.md
frontend/: api.js  app.js  index.html  manifest.webmanifest  navigation-routes.js  service-worker.js  settings.js  styles.css  watch.js
frontend/components/: app-shell.css  app-shell.js  changes-tree.css  changes-tree.js  code-viewer.css  code-viewer.js  commit-changes-tree.css  commit-changes-tree.js  compare-tree.css  compare-tree.js  diff-viewer.css  diff-viewer.js  dom.js  file-browser.css  file-browser.js  file-list.css  file-list.js  file-viewer.css  file-viewer.js  git-compare-browser.css  git-compare-browser.js  git-diff-browser.css  git-diff-browser.js  git-panel.css  git-panel.js  github-issue-viewer.css  github-issue-viewer.js  github-issues-list.css  github-issues-list.js  github-markdown.js  github-pull-files-tree.js  github-pull-viewer.css  github-pull-viewer.js  github-pulls-list.css  github-pulls-list.js  header-actions.css  header-actions.js  icons.js  log-list.css  log-list.js  (+8 more)
frontend/pages/: layout.css  layout.js
src/: app.rs  cli.rs  codex_app_server.rs  codex_thread_sessions.rs  fs.rs  git.rs  github.rs  lib.rs  main.rs  project_store.rs  server_settings.rs  static_assets.rs  task_activity.rs  task_rollout.rs  thread_store.rs  watch.rs
src/codex_app_server/: protocol.rs
src/codex_thread_sessions/: tests.rs
tests/: codex-protocol.test.mjs  navigation-routes.test.mjs  watch.test.mjs
tests/e2e/: file-browser.spec.js  global-setup.mjs  global-teardown.mjs  task-permissions.spec.js
tests/live/: codex-bin.mjs  codex-task-loop.spec.js
(+147 files in other folders)
