[package]
name = "codger"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
gluesql = { git = "https://github.com/gluesql/gluesql.git", rev = "fd8339a76eaf26dc0b4d22187075e778ab69d95c", default-features = false, features = ["gluesql_memory_storage", "gluesql-redb-storage"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.20.0"
