[package]
name = "caffold"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.32"
gluesql = { git = "https://github.com/gluesql/gluesql.git", branch = "main", default-features = false, features = ["gluesql_memory_storage", "gluesql-redb-storage"] }
notify = "8.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "3.20.0"
